--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Contect</a>
-        <a href="#">About</a>
+        <a href="prac.html">About</a>
         <a href="login.html" target="_blank">Login</a>
         <a href="form.html" target="_blank">Register</a>
     </nav>
